# Multi-Agent-

./: Readme.md  input.json  proposal_7.html  proposal_7.md  script.py
Data-Science-Capstone-Website/: README.md  main.py
Data-Science-Capstone-Website-updated/src/: app.py  data_management.py  forms.py  pages.py  utils.py
Github/Ruleset/: README.md
Grading/: Grading.xlsx
Package_Creation/Pip_Python_Install_Locally/: pyproject.toml
Package_Creation/Pip_Python_Install_Locally/main/: main.py
Package_Creation/Pypi/: Readme.md
Package_Creation/Sphinx_demo/Adavnce/: README.rst
Package_Creation/Sphinx_demo/Adavnce/docs/: conf.py  helloworld.rst  index.rst  modules.rst  overview.calculator.rst  overview.helloworld.rst  overview.rst  sg_execution_times.rst
Package_Creation/Sphinx_demo/Adavnce/examples/: readme.rst
Package_Creation/Sphinx_demo/Basic/: README.md
Pdf_Reader/: answers.txt  qa.json  read_pdf.py
Pip_Python_Install_Locally/: LICENSE  README.md
Pypi/: Readme.md
Report_Gen/: Readme.md  input.json  json_gen.py  proposal_Amir Jafari.md  script.py
Sample_Capstone/: Multiagent-Diagram.drawio  Readme.md
Sample_Capstone/code/: Readme.md
Sample_Capstone/code/component/: class_two.py  utils_two.py
Sample_Capstone/reports/Markdown_Report/: report-README.md.md
Sample_Capstone/reports/Progress_Report/: Progress_Report.md
Sample_Capstone/src/component/: utils_one.py
Sample_Capstone/src/tests/: main.py
presentation/: Readme.md
reports/Markdown_Report/: README.md
research_paper/: Rebuttal.docx
src/component/: class_one.py
(+75 files in other folders)
