[project]
name = "mycalculator" # REQUIRED
version = "0.0.1" # REQUIRED
authors = [
    { name = "Example Author", email = "author@example.com" },
]
description = "A small example calulator package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    # These are used when you publish your package.
    # refer https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy"] # This is an eg, not used in the code

# Optional
[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

# Specifies the backend to build the package
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
